--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "description": "AnyStop API",
   "version": "0.0.1",
   "dependencies": {
-      "express": "2.5.0"
-    , "mongoose": ">= 1.1.0"
-    , "redis": ">= 0.6.7"
+      "express": ">= 2.5.8"
+    , "mongoose": ">= 2.5.7"
     , "jade": ">= 0.19.0"
-    , "csv": ">= 0.0.10"
-    , "async": ">=0.1.16"
+    , "csv": ">= 0.0.11"
+    , "async": ">= 0.1.16"
   }
 }
