--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
       "express": ">= 2.5.8"
     , "mongoose": ">= 2.5.7"
-    , "jade": ">= 0.19.0"
     , "csv": ">= 0.0.11"
     , "async": ">= 0.1.16"
+    , "less": "> 1.2.2"
+    , "request": ">= 2.9.152"
   }
 }
