--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     , "request": ">= 2.9.152"
     , "underscore": ">= 1.3.1"
   },
+  "scripts": {
+    "download": "node scripts/download.js"
+  },
   "keywords": ["transit","gtfs","transportation"],
   "repository": "git://github.com/brendannee/node-gtfs",
   "main": "index"
