--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.2",
   "author": "Brendan Nee <me@bn.ee>",
   "dependencies": {
-      "express": ">= 2.5.8"
+      "express": ">= 3.x"
     , "mongoose": ">= 2.5.7"
     , "mongodb": ">=0.9.9-4"
     , "csv": ">= 0.0.11"
