--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Brendan Nee <me@bn.ee>",
   "dependencies": {
       "express": ">= 3.x"
-    , "mongoose": ">= 2.5.7"
+    , "mongoose": ">= 3.x"
     , "mongodb": ">=0.9.9-4"
     , "csv": ">= 0.0.11"
     , "async": ">= 0.1.16"
