--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.2",
   "author": "Brendan Nee <me@bn.ee>",
   "dependencies": {
-      "express": ">= 3.x"
-    , "mongoose": ">= 3.x"
-    , "mongodb": ">=0.9.9-4"
-    , "csv": ">= 0.0.11"
-    , "async": ">= 0.1.16"
-    , "request": ">= 2.9.152"
-    , "underscore": ">= 1.3.1"
+      "express": ">= 3.1.x"
+    , "mongoose": ">= 3.5.x"
+    , "mongodb": ">= 1.2.x"
+    , "csv": ">= 0.2.x"
+    , "async": ">= 0.2.x"
+    , "request": ">= 2.14.x"
+    , "underscore": ">= 1.4.4"
   },
   "scripts": {
     "download": "node scripts/download.js"
