--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "0.0.2",
   "author": "Brendan Nee <me@bn.ee>",
   "dependencies": {
-      "express": ">= 3.1.x"
-    , "mongoose": ">= 3.5.x"
-    , "mongodb": ">= 1.2.x"
-    , "csv": ">= 0.2.x"
-    , "async": ">= 0.2.x"
-    , "request": ">= 2.14.x"
-    , "underscore": ">= 1.4.4"
-	, "unzip": ">= "0.1.7"
-  },
   "scripts": {
     "download": "node scripts/download.js"
+      "express": "= 3.2.x"
+    , "mongoose": "= 3.6.x"
+    , "mongodb": "= 1.3.x"
+    , "csv": "= 0.3.x"
+    , "async": "= 0.2.x"
+    , "request": "= 2.x.x"
+    , "underscore": "= 1.4.x"
+    , "unzip": "= 0.1.x"
   },
   "keywords": ["transit","gtfs","transportation"],
   "repository": "git://github.com/brendannee/node-gtfs",
