Added more contributors

--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
     {
       "name": "Jacob Childress",
       "email": "jacobc@gmail.com"
+    },
+    {
+      "name": "wdalrymple"
+    },
+    {
+      "name": "Matt Gruskin"
+    },
+    {
+      "name": "Ethan Lo",
+      "email": "ethan@ethanlo.com"
     }
   ],
   "dependencies": {
