--- a/package.json
+++ b/package.json
@@ -24,21 +24,29 @@
     }
   ],
   "dependencies": {
-      "express": "= 3.2.x"
-    , "mongoose": "= 3.6.x"
-    , "mongodb": "= 1.3.x"
-    , "csv": "= 0.3.x"
-    , "async": "= 0.2.x"
-    , "request": "= 2.x.x"
-    , "underscore": "= 1.4.x"
-    , "unzip": "= 0.1.x"
+    "express": "= 3.2.x",
+    "mongoose": "= 3.6.x",
+    "mongodb": "= 1.3.x",
+    "csv": "= 0.3.x",
+    "async": "= 0.2.x",
+    "request": "= 2.x.x",
+    "underscore": "= 1.4.x",
+    "unzip": "= 0.1.x"
   },
-  "keywords": ["transit","gtfs","transportation"],
+  "keywords": [
+    "transit",
+    "gtfs",
+    "transportation"
+  ],
   "repository": "git://github.com/brendannee/node-gtfs",
   "main": "index",
   "devDependencies": {
     "csv-parse": "0.0.5",
     "should": "^4.0.4",
-    "supertest": "^0.13.0"
+    "supertest": "^0.13.0",
+    "timekeeper": "0.0.4"
+  },
+  "scripts": {
+    "test": "NODE_ENV=test mocha ./test/mocha/**/*.js --reporter spec"
   }
 }
