--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     }
   ],
   "dependencies": {
-    "express": "= 3.2.x",
-    "mongoose": "= 3.6.x",
-    "mongodb": "= 1.3.x",
-    "csv": "= 0.3.x",
-    "async": "= 0.2.x",
-    "request": "= 2.x.x",
-    "underscore": "= 1.4.x",
-    "unzip": "= 0.1.x"
+    "express": "~3.14.0",
+    "mongoose": "~3.8.13",
+    "mongodb": "~1.4.7",
+    "csv": "~0.4.0",
+    "async": "~0.9.0",
+    "request": "~2.38.0",
+    "underscore": "~1.6.0",
+    "unzip": "~0.1.9"
   },
   "keywords": [
     "transit",
