--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -1,21 +1,21 @@
 {
   "name": "node-gtfs-exampleapp",
   "description": "An example Express app for node-gtfs. Explore transit data.",
-  "version": "0.1.0",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "private": false,
   "repository": "git://github.com/brendannee/node-gtfs",
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.10.6",
-    "body-parser": "~1.10.0",
-    "cookie-parser": "~1.3.3",
-    "gtfs": "~0.0.4",
-    "morgan": "~1.5.0",
-    "serve-favicon": "~2.2.0",
-    "debug": "~2.1.0",
-    "jade": "~1.8.2"
+    "body-parser": "~1.12.0",
+    "bower": "~1.3.12",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.2",
+    "express": "~4.12.2",
+    "gtfs": "~0.1.0",
+    "jade": "~1.9.2",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0"
   }
 }
