--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "dependencies": {
     "async": "~0.9.0",
     "csv": "~0.4.1",
-    "mongoose": "~3.8.24",
-    "mongodb": "~1.4.34",
-    "request": "~2.53.0",
+    "mongoose": "~3.8.25",
+    "mongodb": "~2.0.24",
+    "request": "~2.54.0",
     "underscore": "~1.8.2",
     "unzip2": "~0.2.5"
   },
@@ -40,10 +40,10 @@
   "repository": "git://github.com/brendannee/node-gtfs",
   "main": "index",
   "devDependencies": {
-    "csv-parse": "0.0.9",
-    "should": "^5.1.0",
-    "supertest": "^0.15.0",
-    "timekeeper": "0.0.5"
+    "csv-parse": "~0.1.0",
+    "should": "~5.2.0",
+    "supertest": "~0.15.0",
+    "timekeeper": "~0.0.5"
   },
   "scripts": {
     "download": "node scripts/download.js",
