--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -5,7 +5,8 @@
   "private": false,
   "repository": "git://github.com/brendannee/node-gtfs",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
@@ -13,7 +14,7 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.2",
     "express": "~4.12.2",
-    "gtfs": "~0.1.0",
+    "gtfs": "~0.1.2",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
