--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "= 3.2.x",
     "mongodb": "= 1.3.x",
     "mongoose": "= 3.6.x",
+    "proj4": "^2.3.6",
     "request": "= 2.x.x",
     "underscore": "= 1.4.x",
     "unzip": "= 0.1.x"
