--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "async": "= 0.2.x",
     "csv": "= 0.3.x",
     "express": "= 3.2.x",
+    "glob": "= 5.0.14",
     "mongodb": "= 1.3.x",
     "mongoose": "= 3.6.x",
-    "proj4": "^2.3.6",
+    "proj4": "= 2.3.6",
     "request": "= 2.x.x",
     "underscore": "= 1.4.x",
     "unzip": "= 0.1.x"
