--- a/package.json
+++ b/package.json
@@ -72,10 +72,12 @@
   "dependencies": {
     "async": "1.5.2",
     "csv": "0.4.6",
-    "mongoose": "4.4.4",
+    "mkdirp": "^0.5.1",
     "mongodb": "2.1.7",
+    "mongoose": "4.4.4",
     "proj4": "2.3.12",
     "request": "2.69.0",
+    "rimraf": "2.5.2",
     "underscore": "1.8.3",
     "unzip2": "0.2.5"
   },
