--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Download GTFS transit data into mongodb and expose routes, stops, times and more",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "author": {
     "name": "Brendan Nee",
     "email": "me@bn.ee"
@@ -79,7 +79,8 @@
     "request": "2.69.0",
     "rimraf": "2.5.2",
     "underscore": "1.8.3",
-    "unzip2": "0.2.5"
+    "unzip2": "0.2.5",
+    "yargs": "4.3.2"
   },
   "keywords": [
     "transit",
