--- a/package.json
+++ b/package.json
@@ -72,9 +72,10 @@
   "dependencies": {
     "async": "1.5.2",
     "csv": "0.4.6",
+    "lodash": "^4.12.0",
     "mkdirp": "0.5.1",
-    "mongodb": "2.1.14",
-    "mongoose": "4.4.10",
+    "mongodb": "2.1.18",
+    "mongoose": "4.4.16",
     "proj4": "2.3.14",
     "request": "2.69.0",
     "rimraf": "2.5.2",
