--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "csv": "1.1.0",
     "lodash": "4.16.1",
     "mkdirp": "0.5.1",
+    "moment": "2.15.1",
     "mongodb": "2.2.10",
     "mongoose": "4.6.1",
     "proj4": "2.3.15",
