Changes to config.json format, renamed npm download to npm import
Reorganize import.js, update tests to work with new config format
Improvements to error handling
renamed download task to import

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "timekeeper": "0.1.1"
   },
   "scripts": {
-    "download": "node scripts/download.js",
+    "import": "node scripts/import.js",
     "test": "NODE_ENV=test mocha ./test/mocha/**/*.js --reporter spec --timeout 5000"
   },
   "license": "MIT"
