--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
-  "description": "Download GTFS transit data into mongodb and expose routes, stops, times and more",
-  "version": "0.4.12",
+  "description": "Import GTFS transit data into mongodb and expose routes, stops, times and more",
+  "version": "0.5.0",
   "keywords": [
     "transit",
     "gtfs",
