Updates to eslint config

--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
   "main": "index",
   "devDependencies": {
     "csv-parse": "1.1.7",
-    "eslint": "3.8.1",
+    "eslint": "3.9.1",
+    "eslint-config-airbnb-base": "10.0.1",
+    "eslint-plugin-import": "2.2.0",
     "mocha": "3.1.2",
     "should": "11.1.1",
     "supertest": "2.0.1",
