Update example GTFS URL

--- a/config-sample.json
+++ b/config-sample.json
@@ -3,7 +3,7 @@
   "agencies": [
     {
       "agency_key": "county-connection",
-      "url": "http://cccta.org/GTFS/google_transit.zip",
+      "url": "http://countyconnection.com/GTFS/google_transit.zip",
       "exclude": [
         "shapes"
       ]
