--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "async": "2.1.5",
     "csv": "1.1.1",
+    "extract-zip": "1.6.0",
     "lodash": "4.17.4",
     "mkdirp": "0.5.1",
     "moment": "2.17.1",
@@ -42,7 +43,6 @@
     "proj4": "2.3.17",
     "request": "2.79.0",
     "rimraf": "2.6.0",
-    "unzip2": "0.2.5",
     "yargs": "6.6.0"
   },
   "devDependencies": {
