--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "keywords": [
     "transit",
     "gtfs",
@@ -40,15 +40,15 @@
     "mkdirp": "0.5.1",
     "moment": "2.17.1",
     "mongodb": "2.2.24",
-    "proj4": "2.3.17",
-    "request": "2.79.0",
-    "rimraf": "2.6.0",
-    "yargs": "6.6.0"
+    "proj4": "2.4.3",
+    "request": "2.81.0",
+    "rimraf": "2.6.1",
+    "yargs": "7.0.2"
   },
   "devDependencies": {
     "csv-parse": "1.2.0",
     "mocha": "3.2.0",
-    "should": "11.2.0",
+    "should": "11.2.1",
     "timekeeper": "1.0.0",
     "xo": "0.17.1"
   },
@@ -76,6 +76,7 @@
   },
   "xo": {
     "esnext": true,
-    "space": true
+    "space": true,
+    "maxParams": false
   }
 }
