Fix for relative and tilde import paths

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "0.9.10",
+  "version": "0.9.11",
   "keywords": [
     "transit",
     "gtfs",
@@ -33,9 +33,9 @@
     "David Aghassi"
   ],
   "dependencies": {
-    "async": "2.3.0",
+    "async": "2.4.0",
     "csv": "1.1.1",
-    "extract-zip": "1.6.0",
+    "extract-zip": "1.6.5",
     "lodash": "4.17.4",
     "mkdirp": "0.5.1",
     "moment": "2.18.1",
@@ -43,14 +43,15 @@
     "proj4": "2.4.3",
     "request": "2.81.0",
     "rimraf": "2.6.1",
-    "yargs": "7.0.2"
+    "untildify": "3.0.2",
+    "yargs": "8.0.1"
   },
   "devDependencies": {
     "csv-parse": "1.2.0",
-    "mocha": "3.2.0",
+    "mocha": "3.3.0",
     "should": "11.2.1",
     "timekeeper": "1.0.0",
-    "xo": "0.18.1"
+    "xo": "0.18.2"
   },
   "peerDependencies": {
     "mongoose": ">= 4.8.4"
