Fix for import from unzipped local file

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "dependencies": {
     "async": "2.4.0",
+    "copy": "^0.3.0",
     "csv": "1.1.1",
     "extract-zip": "1.6.5",
     "lodash": "4.17.4",
