--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "0.10.2",
+  "version": "0.10.3",
   "keywords": [
     "transit",
     "gtfs",
-    "transportation"
+    "transportation",
+    "geojson"
   ],
   "author": "Brendan Nee <brendan@blinktag.com>",
   "contributors": [
