--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "0.12.0",
+  "version": "0.12.1",
   "keywords": [
     "transit",
     "gtfs",
@@ -37,16 +37,16 @@
   ],
   "dependencies": {
     "bluebird": "^3.5.0",
-    "csv": "1.1.1",
-    "extract-zip": "1.6.5",
+    "csv": "^1.1.1",
+    "extract-zip": "^1.6.5",
     "fs-extra": "^3.0.1",
-    "lodash": "4.17.4",
-    "moment": "2.18.1",
-    "mongodb": "^2.2.29",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "mongodb": "^2.2.30",
     "mongoose": "^4.11.1",
-    "node-fetch": "1.7.1",
-    "proj4": "2.4.3",
-    "untildify": "3.0.2",
+    "node-fetch": "^1.7.1",
+    "proj4": "^2.4.3",
+    "untildify": "^3.0.2",
     "yargs": "^8.0.2"
   },
   "devDependencies": {
