--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "0.12.1",
+  "version": "1.0.0-beta.1",
   "keywords": [
     "transit",
     "gtfs",
@@ -42,8 +42,8 @@
     "fs-extra": "^3.0.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "mongodb": "^2.2.30",
-    "mongoose": "^4.11.1",
+    "mongodb": "2.2.27",
+    "mongoose": "4.10.8",
     "node-fetch": "^1.7.1",
     "proj4": "^2.4.3",
     "untildify": "^3.0.2",
@@ -73,7 +73,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">= 8.0"
+    "node": ">= 8.1.4"
   },
   "xo": {
     "esnext": true,
