--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.2",
   "keywords": [
     "transit",
     "gtfs",
@@ -51,6 +51,10 @@
   },
   "devDependencies": {
     "csv-parse": "1.2.0",
+    "eslint-config-xo": "^0.18.2",
+    "eslint-plugin-ava": "^4.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-unicorn": "^2.1.2",
     "mocha": "3.4.2",
     "should": "11.2.1",
     "timekeeper": "1.0.0",
