--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "keywords": [
     "transit",
     "gtfs",
@@ -41,20 +41,20 @@
     "extract-zip": "^1.6.6",
     "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
-    "moment": "^2.19.1",
+    "moment": "^2.19.2",
     "mongodb": "2.2.33",
-    "mongoose": "4.13.0",
+    "mongoose": "4.13.4",
     "node-fetch": "^1.7.3",
     "proj4": "^2.4.4",
     "untildify": "^3.0.2",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
-    "csv-parse": "2.0.0",
+    "csv-parse": "^2.0.0",
     "eslint-config-xo": "^0.19.0",
     "eslint-plugin-ava": "^4.2.2",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-unicorn": "^2.1.2",
+    "eslint-plugin-unicorn": "^3.0.0",
     "mocha": "^4.0.1",
     "should": "^13.1.3",
     "timekeeper": "^2.0.0",
