--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "keywords": [
     "transit",
     "gtfs",
@@ -34,7 +34,8 @@
     "David Aghassi",
     "Steven Prins",
     "W3stside",
-    "pitrz"
+    "pitrz",
+    "pusztaienike"
   ],
   "dependencies": {
     "csv": "^2.0.0",
@@ -43,7 +44,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "mongodb": "2.2.33",
-    "mongoose": "4.13.4",
+    "mongoose": "4.13.5",
     "node-fetch": "^1.7.3",
     "proj4": "^2.4.4",
     "untildify": "^3.0.2",
@@ -52,7 +53,7 @@
   "devDependencies": {
     "csv-parse": "^2.0.0",
     "eslint-config-xo": "^0.19.0",
-    "eslint-plugin-ava": "^4.2.2",
+    "eslint-plugin-ava": "^4.3.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-unicorn": "^3.0.0",
     "mocha": "^4.0.1",
