--- a/package.json
+++ b/package.json
@@ -52,10 +52,8 @@
   },
   "devDependencies": {
     "csv-parse": "^2.0.0",
+    "eslint": "^4.11.0",
     "eslint-config-xo": "^0.19.0",
-    "eslint-plugin-ava": "^4.3.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-unicorn": "^3.0.0",
     "mocha": "^4.0.1",
     "should": "^13.1.3",
     "timekeeper": "^2.0.0",
