--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
   },
   "devDependencies": {
     "csv-parse": "^2.0.0",
-    "eslint": "^4.12.0",
-    "eslint-config-xo": "^0.19.0",
     "mocha": "^4.0.1",
     "should": "^13.1.3",
     "timekeeper": "^2.0.0",
@@ -81,6 +79,14 @@
   },
   "xo": {
     "esnext": true,
-    "space": true
+    "space": true,
+    "rules": {
+      "camelcase": [
+        "error",
+        {
+          "properties": "never"
+        }
+      ]
+    }
   }
 }
