--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "keywords": [
     "transit",
     "gtfs",
@@ -41,11 +41,11 @@
   "dependencies": {
     "csv": "^2.0.0",
     "extract-zip": "^1.6.6",
-    "fs-extra": "^4.0.2",
+    "fs-extra": "^5.0.0",
     "lodash": "^4.17.4",
-    "moment": "^2.19.3",
+    "moment": "^2.20.1",
     "mongodb": "2.2.33",
-    "mongoose": "4.13.6",
+    "mongoose": "5.0.0-rc2",
     "node-fetch": "^1.7.3",
     "proj4": "^2.4.4",
     "untildify": "^3.0.2",
@@ -53,8 +53,8 @@
   },
   "devDependencies": {
     "csv-parse": "^2.0.0",
-    "mocha": "^4.0.1",
-    "should": "^13.1.3",
+    "mocha": "^4.1.0",
+    "should": "^13.2.0",
     "timekeeper": "^2.0.0",
     "xo": "^0.18.2"
   },
