Dependency update and version bump

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "keywords": [
     "transit",
     "gtfs",
@@ -42,9 +42,10 @@
     "csv-parse": "^2.0.0",
     "extract-zip": "^1.6.6",
     "fs-extra": "^5.0.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "mongoose": "5.0.3",
+    "node-fetch": "^2.0.0",
     "proj4": "^2.4.4",
     "untildify": "^3.0.2",
     "yargs": "^11.0.0"
