--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
-  "description": "Import GTFS transit data into mongodb and query routes, stops, times, fares and more",
-  "version": "1.5.4",
+  "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
+  "version": "1.6.0",
   "keywords": [
     "transit",
     "gtfs",
@@ -44,11 +44,13 @@
     "fs-extra": "^5.0.0",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
-    "mongoose": "5.0.9",
     "node-fetch": "^2.1.1",
     "proj4": "^2.4.4",
     "untildify": "^3.0.2",
     "yargs": "^11.1.0"
+  },
+  "peerDependencies": {
+    "mongoose": "^5.0.10"
   },
   "devDependencies": {
     "mocha": "^5.0.4",
