--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
-  "version": "1.6.2",
+  "version": "1.6.3",
   "keywords": [
     "transit",
     "gtfs",
@@ -35,15 +35,16 @@
     "Steven Prins",
     "W3stside",
     "pitrz",
+    "pravdomil",
     "pusztaienike",
     "Andrea Gilardoni"
   ],
   "dependencies": {
-    "csv-parse": "^2.1.0",
+    "csv-parse": "^2.4.0",
     "extract-zip": "^1.6.6",
     "fs-extra": "^5.0.0",
-    "lodash": "^4.17.5",
-    "moment": "^2.22.0",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.1",
     "node-fetch": "^2.1.2",
     "proj4": "^2.4.4",
     "untildify": "^3.0.2",
@@ -53,9 +54,9 @@
     "mongoose": "^5.0.12"
   },
   "devDependencies": {
-    "mocha": "^5.0.5",
+    "mocha": "^5.1.1",
     "should": "^13.2.1",
-    "timekeeper": "^2.1.0",
+    "timekeeper": "^2.1.1",
     "xo": "^0.20.3"
   },
   "repository": {
@@ -70,7 +71,7 @@
   },
   "main": "index",
   "scripts": {
-    "test": "NODE_ENV=test mocha ./test/mocha/**/*.js --timeout 3000",
+    "test": "NODE_ENV=test mocha ./test/mocha/**/*.js --timeout 5000",
     "lint": "xo"
   },
   "license": "MIT",
