--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
-  "version": "1.6.10",
+  "version": "1.7.0",
   "keywords": [
     "transit",
     "gtfs",
@@ -37,19 +37,20 @@
     "pitrz",
     "pravdomil",
     "pusztaienike",
-    "Andrea Gilardoni"
+    "Andrea Gilardoni",
+    "Sergio Behrends <sergio@behrends.com.ar>"
   ],
   "dependencies": {
-    "colors": "^1.3.2",
+    "colors": "^1.3.3",
     "csv-parse": "^3.0.0",
     "extract-zip": "^1.6.7",
-    "fs-extra": "^7.0.0",
+    "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
-    "node-fetch": "^2.2.0",
+    "moment": "^2.23.0",
+    "node-fetch": "^2.3.0",
     "proj4": "^2.5.0",
     "untildify": "^3.0.3",
-    "yargs": "^12.0.2"
+    "yargs": "^12.0.5"
   },
   "peerDependencies": {
     "mongoose": "^5.2.16"
@@ -77,7 +78,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">= 8.11.3"
+    "node": ">= 8.14.0"
   },
   "xo": {
     "esnext": true,
