--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "keywords": [
     "transit",
     "gtfs",
@@ -38,7 +38,8 @@
     "pravdomil",
     "pusztaienike",
     "Andrea Gilardoni",
-    "Sergio Behrends <sergio@behrends.com.ar>"
+    "Sergio Behrends <sergio@behrends.com.ar>",
+    "herrBeesch"
   ],
   "dependencies": {
     "colors": "^1.3.3",
