--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
-  "version": "1.8.2",
+  "version": "1.8.3",
   "keywords": [
     "transit",
     "gtfs",
@@ -39,7 +39,8 @@
     "pusztaienike",
     "Andrea Gilardoni",
     "Sergio Behrends <sergio@behrends.com.ar>",
-    "herrBeesch"
+    "herrBeesch",
+    "Oskari Groenroos <oskari@groenroos.fi>"
   ],
   "dependencies": {
     "colors": "^1.3.3",
@@ -54,12 +55,12 @@
     "yargs": "^13.2.2"
   },
   "peerDependencies": {
-    "mongoose": "^5.2.16"
+    "mongoose": "^5.2.20"
   },
   "devDependencies": {
     "mocha": "^6.0.2",
     "should": "^13.2.3",
-    "timekeeper": "^2.1.2",
+    "timekeeper": "^2.2.0",
     "xo": "^0.24.0"
   },
   "repository": {
