Strip byte-order-markers if present when importing

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.3.0",
     "proj4": "^2.5.0",
+    "strip-bom-stream": "^3.0.0",
     "untildify": "^3.0.3",
     "yargs": "^13.2.2"
   },
