--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
-  "version": "1.8.3",
+  "version": "1.8.4",
   "keywords": [
     "transit",
     "gtfs",
@@ -40,7 +40,8 @@
     "Andrea Gilardoni",
     "Sergio Behrends <sergio@behrends.com.ar>",
     "herrBeesch",
-    "Oskari Groenroos <oskari@groenroos.fi>"
+    "Oskari Groenroos <oskari@groenroos.fi>",
+    "Devin Packer"
   ],
   "dependencies": {
     "colors": "^1.3.3",
