--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
-  "version": "1.8.6",
+  "version": "1.8.7",
   "keywords": [
     "transit",
     "gtfs",
@@ -45,22 +45,23 @@
   ],
   "dependencies": {
     "colors": "^1.3.3",
-    "csv-parse": "^4.4.0",
+    "csv-parse": "^4.4.1",
     "extract-zip": "^1.6.7",
-    "fs-extra": "^7.0.1",
+    "fs-extra": "^8.0.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "node-fetch": "^2.3.0",
+    "node-fetch": "^2.6.0",
     "proj4": "^2.5.0",
-    "strip-bom-stream": "^3.0.0",
-    "untildify": "^3.0.3",
-    "yargs": "^13.2.2"
+    "strip-bom-stream": "^4.0.0",
+    "tmp-promise": "^1.1.0",
+    "untildify": "^4.0.0",
+    "yargs": "^13.2.4"
   },
   "peerDependencies": {
-    "mongoose": "^5.5.0"
+    "mongoose": "^5.5.10"
   },
   "devDependencies": {
-    "mocha": "^6.1.2",
+    "mocha": "^6.1.4",
     "should": "^13.2.3",
     "timekeeper": "^2.2.0",
     "xo": "^0.24.0"
