--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gtfs",
   "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
-  "version": "1.8.8",
+  "version": "1.8.9",
   "keywords": [
     "transit",
     "gtfs",
@@ -44,7 +44,7 @@
     "Devin Packer"
   ],
   "dependencies": {
-    "colors": "^1.3.3",
+    "chalk": "^2.4.2",
     "csv-parse": "^4.4.4",
     "extract-zip": "^1.6.7",
     "fs-extra": "^8.1.0",
