Dependency update and version bump
Readme updates for CSV options

--- a/config-sample.json
+++ b/config-sample.json
@@ -1,5 +1,8 @@
 {
   "mongoUrl": "mongodb://localhost:27017/gtfs",
+  "csvOptions": {
+    "skip_lines_with_error": true
+  },
   "agencies": [
     {
       "agency_key": "county-connection",
