--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "gtfs",
-  "description": "Import GTFS transit data into MongoDB and query routes, stops, times, fares and more",
-  "version": "1.10.4",
+  "description": "Import GTFS transit data into SQLite and query routes, stops, times, fares and more",
+  "version": "2.0.0",
   "keywords": [
     "transit",
     "gtfs",
     "transportation",
-    "geojson"
+    "geojson",
+    "sqlite"
   ],
   "author": "Brendan Nee <brendan@blinktag.com>",
   "contributors": [
@@ -47,28 +48,26 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "chalk": "^4.1.0",
-    "csv-parse": "^4.11.1",
+    "csv-parse": "^4.12.0",
+    "csv-stringify": "^5.5.1",
     "extract-zip": "^2.0.1",
     "fs-extra": "^9.0.1",
-    "csv-stringify": "^5.5.0",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "node-fetch": "^2.6.0",
-    "proj4": "^2.6.2",
     "sanitize-filename": "^1.6.3",
+    "sqlite": "^4.0.14",
+    "sqlite3": "^5.0.0",
+    "sqlstring": "^2.3.2",
     "strip-bom-stream": "^4.0.0",
     "tmp-promise": "^3.0.2",
     "untildify": "^4.0.0",
     "yargs": "^15.4.1"
   },
-  "peerDependencies": {
-    "mongoose": "^5.9.26"
-  },
   "devDependencies": {
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.1",
     "should": "^13.2.3",
-    "timekeeper": "^2.2.0",
-    "xo": "^0.32.1"
+    "xo": "^0.33.0"
   },
   "repository": {
     "type": "git",
