--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
     "node-fetch": "^2.6.1",
+    "pretty-error": "^2.1.1",
     "sanitize-filename": "^1.6.3",
     "sqlite": "^4.0.14",
     "sqlite3": "^5.0.0",
