--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "chalk": "^4.1.0",
     "csv-parse": "^4.14.1",
     "csv-stringify": "^5.5.3",
-    "extract-zip": "^2.0.1",
     "fs-extra": "^9.0.1",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
@@ -63,6 +62,7 @@
     "strip-bom-stream": "^4.0.0",
     "tmp-promise": "^3.0.2",
     "untildify": "^4.0.0",
+    "unzipper": "^0.10.11",
     "yargs": "^16.1.1"
   },
   "devDependencies": {
