Support for exportPath config option

--- a/config-sample.json
+++ b/config-sample.json
@@ -11,5 +11,6 @@
   "csvOptions": {
     "skip_lines_with_error": true
   },
-  "sqlitePath": "/tmp/gtfs"
+  "sqlitePath": "/tmp/gtfs",
+  "exportPath": "~/path/to/export/gtfs"
 }
