--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.20",
     "node-fetch": "^2.6.1",
+    "pluralize": "^8.0.0",
     "pretty-error": "^3.0.3",
     "sanitize-filename": "^1.6.3",
     "sqlite": "^4.0.19",
